--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p>If you move your nose to the left the amount of purple flares will increase.
         If you increase your voice, a green halo will appear.
         The background changes to the values of the measurements in the channel 0 of the EEG.</p>
+    <p>After the posture detecting model is loaded, click on the image to start the audio processing.</p>
     <p id="status">Wait for the model to download...</p>
     <script src="sketch.js"></script>
   </body>
